# Cpp-laboratories

./: README.md
Lab1/: CMakeLists.txt  readme.md
Lab1/cmake/: common.cmake  dima.cmake
Lab1/src/lab/: CMakeLists.txt  fraction.cpp  fraction.h  fractionTests.cpp
Lab1/src/utils/: argumentParsing.cpp
Lab2/: CMakeLists.txt  readme.md
Lab2/src/lab2/: CMakeLists.txt  matrix.cc  matrix.h  matrixTests.cc
Lab2/src/utils/: argumentParsing.h  programmerDetails.h
Lab3/: CMakeLists.txt  readme.md
Lab3/src/lab3/: fraction.cpp  fraction.h  fractionTests.cpp  vector.cpp  vector.h  vectorTests.cpp
Lab3/src/utils/: programmerDetails.h
Lab4/: CMakeLists.txt
Lab4/cmake/: common.cmake
Lab4/src/lab4/: circle.h  rectangle.h  shape.h  shapecomposite.cpp  shapecomposite.h  stage.h
Lab4/src/utils/: CMakeLists.txt  programmerDetails.h
Lab5/: CMakeLists.txt
Lab5/src/lab5/: CMakeLists.txt  MyListTests.cpp  main.cpp  mySorting.h  mylist.h
Lab5/src/utils/: programmerDetails.h
Lab6/: CMakeLists.txt
Lab6/cmake/: common.cmake  dima.cmake
Lab6/src/lab6/: MyStringTests.cpp  main.cpp  mystring.cpp  mystring.h
Lab6/src/utils/: programmerDetails.cpp  programmerDetails.h
